<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/main_xl_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp" >

        <RadioButton
            android:id="@+id/main_xl_jl_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:text="@string/main_file_jl_tx" />

        <RadioButton
            android:id="@+id/main_xl_yy_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:text="@string/main_file_yy_tx" />

        <RadioButton
            android:id="@+id/main_xl_sh_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:text="@string/main_file_sh_tx" />

        <RadioButton
            android:id="@+id/main_xl_yw_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:text="@string/main_file_yw_tx" />

        <RadioButton
            android:id="@+id/main_xl_aqt_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:text="@string/main_file_aqt_tx" />
    </RadioGroup>

</LinearLayout>