<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:background="@drawable/mainback"
    android:focusableInTouchMode="true"
    android:orientation="vertical"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <include layout="@layout/activity_header"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/cache_control"
            android:textColor="@color/litter_item"
            android:textSize="@dimen/text_size_12" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_line" />

        <include layout="@layout/mysetting_cache_include" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/software_update"
            android:textColor="@color/litter_item"
            android:textSize="@dimen/text_size_12" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_line" />

        <include layout="@layout/mysetting_softinfo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/software_info"
            android:textColor="@color/litter_item"
            android:textSize="@dimen/text_size_12" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_line" />

        <include layout="@layout/mysetting_about" />

        <Button
            android:id="@+id/mysetting_outlogin_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/all_btn_bg"
            android:text="@string/exist"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

</LinearLayout>